--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=salah
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.data.rest.base-path=/api
+
+okta.oauth2.client-id=0oa8pain8en7qSXnX5d7
+okta.oauth2.issuer=https://dev-12367658.okta.com/oauth2/default
