--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,21 @@ spring.data.rest.base-path=/api
 
 okta.oauth2.client-id=0oa8pain8en7qSXnX5d7
 okta.oauth2.issuer=https://dev-12367658.okta.com/oauth2/default
+
+#####
+#
+# HTTPS configuration
+#
+#####
+# Server web port
+server.port=8443
+# Enable HTTPS support (only accept HTTPS requests)
+server.ssl.enabled=true
+# Alias that identifies the key in the key store
+server.ssl.key-alias=loveCoding
+# Keystore location
+server.ssl.key-store=classpath:loveCoding-keystore.p12
+# Keystore password
+server.ssl.key-store-password=secret
+# Keystore format
+server.ssl.key-store-type=PKCS12
